@@ -3,6 +3,7 @@
 - faster tiff read for some common cases
 - faster im_tile_cache()
 - add -lstdc++ to vips-7.xx.pc, if we used it
+- im_vips2png() / im_png2vips() set / get png resolution (thanks Zhiyu Wu)
 
 30/11/10 started 7.24.0
 - bump for new stable
